@@ -60,7 +60,8 @@ Version 0.24.0:
 - EDI/ESI registers could be used without being preserved, when clearing local UDTs/strings/arrays > 16 bytes or copying UDTs > 16 bytes. The bug showed up when other parts of the function used EDI/ESI too (for example "plongint[indexvar] = longintvar").
 - Procedure pointers could be dereferenced using the '*' operator
 - #3476028: SWAP/LET() assignments allowed modification of string literals/constants
-- #3476021: SWAP on strings failed/produced bad results when strings had different lengths
+- SWAP on strings failed/produced bad results when strings had different lengths
+- #3476021: SWAP didn't clear fixed-length string remainders
 
 
 Version 0.23.0:
